--- a/PhotoEnumerator.csproj
+++ b/PhotoEnumerator.csproj
@@ -37,6 +37,9 @@
     <Reference Include="ExifLib">
       <HintPath>..\packages\ExifLib.1.6.3.0\lib\net45\ExifLib.dll</HintPath>
     </Reference>
+    <Reference Include="ExifLibrary">
+      <HintPath>..\packages\ExifLibrary\ExifLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.WindowsAPICodePack">
       <HintPath>..\packages\WindowsAPICodePack-Core.1.1.1\lib\Microsoft.WindowsAPICodePack.dll</HintPath>
     </Reference>
