"N" and "n" specifiers in mask.

--- a/App.config
+++ b/App.config
@@ -14,7 +14,7 @@
                 <value />
             </setting>
             <setting name="Mask" serializeAs="String">
-                <value>yyyy-MM-dd_</value>
+                <value>yyyy-MM-dd_n</value>
             </setting>
         </PhotoEnumerator.Properties.Settings>
     </userSettings>
